[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1.23", features = ["full"] }
uuid = { version = "1.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
config = "0.13"
deadpool-postgres = { version = "0.10", features = ["serde"] }
async-std = "1.12.0"
